slash commands for info, ping, dice, and draconic